[project]
name = "python-programming-project"
version = "0.1.0"
description = "match three game"
authors = [
    {name = "KongDanh"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "dominate (==2.9.1)",
    "flask (==3.1.0)",
    "flask-bootstrap (==3.3.7.1)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "numpy (==2.2.3)",
    "pygame (==2.6.1)",
    "scipy (==1.15.2)",
    "visitor (==0.1.3)",
    "werkzeug (==3.1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
